# MultiAgentAnalytics

./: .template-sync.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: data-analyst.md  domain-expert.md  reporter.md  visualizer.md
.claude/commands/: analyze-deep.md  analyze.md
.claude/skills/analysis-guides/: general.md
.claude/skills/analysis-workflow/: SKILL.md
.claude/skills/domains/: general.md
docs/research/: design-direction.md  eda-tools-survey.md  llm-data-analysis-survey.md
docs/tutorials/: titanic-tutorial.md
src/edatool/: __init__.py  cli.py
src/edatool/analysis/: correlation.py  profiler.py  quality.py  stats.py
src/edatool/catalog/: __init__.py  models.py  store.py
src/edatool/core/: config.py  dtypes.py  types.py
src/edatool/io/: loader.py
src/edatool/pipeline/: __init__.py  context.py  executor.py  models.py  parser.py  templates.py
src/edatool/recipes/: __init__.py  ab_test.py  base.py  registry.py
src/edatool/reporting/: __init__.py  json_report.py  markdown.py
src/edatool/viz/: __init__.py  common.py  heatmap.py  histogram.py  scatter.py
tests/: test_catalog.py  test_pipeline.py  test_recipes.py
